# storage/api-docs/api-docs.json
@@ -91,12 +91,14 @@
             "api_key_security_example": {
                 "type": "apiKey",
                 "description": "A short description for security scheme",
-                "name": "api_key",
-                "in": "header"
+                "name": "api_token",
+                "in": "query"
             }
         }
     },
     "security": [
-        []
+        {
+            "api_key_security_example": []
+        }
     ]
 }
